# cal_minor_axis_in_stl

./: CMakeLists.txt  说明文档.docx
src/: CMakeLists.txt  README.md  dia_cal3d.cpp  dia_cal3d2.cpp  dia_cal3d3.cpp  divider.cpp  extract.cpp  max.txt  output.json  result.txt  result_3d.txt
stl/: 2.stl  3.stl
